# macos-menu-bar-stats

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  app.json  deny.toml  entitlements.plist  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
capabilities/: default.json
icons/: icon.icns
ios/: Podfile
ios/MacMenuBarStats/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/MacMenuBarStats.xcodeproj/: project.pbxproj
ios/MacMenuBarStats.xcodeproj/xcshareddata/xcschemes/: MacMenuBarStats.xcscheme
scripts/: build-release.sh  bump-version.sh  get-checksums.sh
src/: App.css  App.tsx  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
