[package]
name = "system-stats"
version = "0.1.0"
description = "simple tauri macos menu bar app for system monitoring"
authors = ["Lars Kemper <larskemper0607@gmail.com> (larskemper.dev)"]
repository = "https://github.com/larskemper/macos-menu-bar-stats"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
name = "system_stats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
starship-battery = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
